--- a/style.css
+++ b/style.css
@@ -12,16 +12,19 @@ font-family: 'Merriweather', serif;
 }
 
 section h2 {
-    font-family: 'Playfair Display SC', serif;
+    font-family: 'Times New Roman', Times, serif;
+    color: #222227;
 }
 
 section h3 {
-        font-family: 'Josefin Sans', sans-serif;
+        font-family: 'Times New Roman', Times, serif;
+        color: #222227;
 }
 
 section p {
-    font-family: 'Merriweather', serif;
-    font-size: 16px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 17px;
+    color: #433B5A;
 }
 
 header p {
@@ -29,11 +32,11 @@ header p {
     font-size: 16px;
 }
 
-
 body {
-    background: #B9D9EB
+    background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%);
     
 }
+
 
 ul {
     list-style: none;
@@ -51,10 +54,11 @@ header, section {
 
 header h1 {
     margin-bottom: 4px;
+    color: #33323C;
 }
 
 header h1 span {
-color: #185578
+color: #4B3A70
 }
 
 section {
@@ -62,11 +66,11 @@ section {
 }
 
 section h2 {
-    background-color: #8EBFDA;
+    background-color: #977CD1;
     padding: 8px 16px;
     text-align: center;
     margin-bottom: 24px;
-    
+
     display: flex; 
     align-items: center; 
     justify-content: center;
@@ -86,9 +90,11 @@ li .details {
 }
 
 .icones {
-    width: 30px;
+    width: 33px;
     padding-left: 5px;
 }
+
+
 
 
 /* display: flex;  entende que um elemento ira ficar de 1 lado e outro de outro, que elementos?
